<resources>
    <string name="app_name">SmartAlert</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_tip">If you don\'t have an account, Sign up instead</string>
    <string name="enter_your_role">Enter your role</string>
    <string name="tornado">Tornado</string>
    <string name="earthquakes">Earthquake</string>
    <string name="fire">Fire</string>
    <string name="flood">Flood</string>
    <string name="choosing_natural_disaster">Please choose the type of emergency you are witnessing</string>
    <string name="submit">Submit</string>
    <string name="name_some_details">Please name some details about the current situation</string>
    <string name="details_eaxmple">e.g. There is a fire spreading towards the east from here</string>
    <string-array name="roles_array">
        <item>User</item>
        <item>Employee</item>
    </string-array>
    <string name="danger_level_prompt">Danger level: </string>
    <string name="validate">Validate</string>
    <string name="reject">Reject</string>
    <string name="error_title">Error</string>
    <string name="success_title">Success</string>
    <string name="user_authenticated">User authenticated</string>
    <string name="emergency_reported">Emergency has been reported</string>
    <string name="total_reports">Total Reports: </string>
    <string name="reports_for_tornadoes">Reports for tornadoes: </string>
    <string name="reports_for_fire">Reports for fire: </string>
    <string name="reports_for_earthquakes">Reports for earthquakes: </string>
    <string name="reports_for_floods">Reports for floods: </string>
    <string name="zero">0</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>